# brainslosher-web-ui

./: .gitignore  README.md  index.html  package.json  pyproject.toml
.github/workflows/: build-frontend.yml  check_version.yml  lint.yml  release.yml  release_and_attach_build.yml  tag_and_publish.yml  test_lint_type.yml
backend/: main.py  pyproject.toml
backend/api/: config.py
backend/dev/: instrument_config.json  web_ui_config.json
backend/src/: main.py
docs/source/: backend.rst  conf.py  deployment.rst  frontend.rst  index.rst  modules.rst
examples/: web_ui_config.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: emails.txt
frontend/src/app/: index.tsx  provider.tsx  router.tsx
frontend/src/app/routes/: HomePage.tsx
frontend/src/components/globalApiError/: GlobalApiError.tsx
frontend/src/components/ui/FinishModal/: finishModal.tsx
frontend/src/components/ui/Header/: Header.tsx
frontend/src/features/instrumentControl/: index.ts
frontend/src/features/instrumentControl/api/: instrumentControlApi.ts
frontend/src/features/instrumentControl/components/: instrumentControl.tsx  runSummaryCheck.tsx
frontend/src/features/progress/: index.ts
frontend/src/features/progress/components/: progressBar.tsx  verticalSlider.tsx
frontend/src/features/protocol/: index.ts
frontend/src/features/protocol/api/: formApi.ts  washVolumesApi.ts
frontend/src/features/protocol/assets/: rjsf-spacing.css
frontend/src/features/protocol/components/: protocolForm.tsx  washVolumes.tsx
frontend/src/features/protocol/types/: protocolSchema.ts  protocolType.tsx
frontend/src/hooks/: useRunErrorHandling.ts
frontend/src/lib/: client.tsx  react-query.ts
frontend/src/stores/: appConfigStore.ts  dataChannelStore.ts  instrumentConfigStore.ts  instrumentStateStore.ts  jobPathStore.ts  progressStore.ts  protocolStore.ts  startTimeStore.ts  themeStore.ts
frontend/src/types/: configTypes.tsx  protocolType.tsx
frontend/src/utils/: getEmptyJob.ts  webRtcConnection.tsx
server/: pyproject.toml
server/src/brainslosher_web_ui/: brainslosher_web_ui_config_model.py  main.py
server/src/brainslosher_web_ui/api/: routes.py  webrtc.py
src/api/: config.py
src/brainslosher_web_ui/: brainslosher_web_ui_config_model.py  main.py
src/brainslosher_web_ui.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/brainslosher_web_ui/api/: routes.py  webrtc.py
src/server/: brainslosher_web_ui_config_model.py
