[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brainslosher_web_ui"
version = "0.0.1.dev0"
description = "FastApi layer for React app."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiortc>=1.14.0",
    "fastapi>=0.128.0",
    "one-liner",
    "tornado>=6.5.4",
    "uvicorn>=0.40.0",
    "zmq>=0.0.0",
]

[project.scripts]
brainslosher_web_ui= "brainslosher_web_ui.main:main"

[dependency-groups]
dev = [
    "ruff",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
extend-select = ['Q', 'RUF100', 'C90', 'I']
extend-ignore = []
mccabe = { max-complexity = 14 }

[tool.uv.sources]
one-liner = { git = "https://github.com/AllenNeuralDynamics/one-liner" }

[tool.hatch.build.targets.wheel]
packages = ["src/brainslosher_web_ui"]

[tool.hatch.build.targets.wheel.force-include]
"src/brainslosher_web_ui/static" = "brainslosher_web_ui/static"