[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiortc>=1.14.0",
    "brainwasher",
    "fastapi>=0.128.0",
    "one-liner",
    "uvicorn>=0.40.0",
    "zmq>=0.0.0",
]

[tool.uv.sources]
one-liner = { git = "https://github.com/AllenNeuralDynamics/one-liner.git" }
brainwasher = { path = "../../brainwasher" }
