[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiortc>=1.14.0",
    "fastapi>=0.128.0",
    "one-liner",
    "tornado>=6.5.4",
    "uvicorn>=0.40.0",
    "zmq>=0.0.0",
]
[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
no_implicit_optional = true
mypy_path = "backend/src"

[[tool.mypy.overrides]]
module = "main"
disallow_untyped_defs = true
[tool.uv.sources]
one-liner = { git = "https://github.com/AllenNeuralDynamics/one-liner.git" }
